--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "react-particles-js": "^3.5.3",
     "react-scripts": "2.1.3",
     "react-tsparticles": "^1.31.2",
-    "solc": "^0.8.6",
+    "solc": "^0.8.0",
     "truffle": "^5.1.39",
-    "typescript": "^4.3.5",
-    "web3": "1.2.11"
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
