--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-tsparticles": "^1.31.2",
     "solc": "^0.8.0",
     "truffle": "^5.1.39",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "web3": "1.2.11"
   },
   "scripts": {
     "start": "react-scripts start",
